<resources>
    <string name="app_name">EasyLife</string>

    <!-- Welcome screen -->
    <string name="welStc">Welcome to Easylife, Click continue to enter login screen</string>
    <string name="welBut">Continue</string>


    <!-- Login Screen -->
    <string name="titleLog">Login</string>
    <string name="logBtnTxt">Login</string>
    <string name="crtAccBtnTxt">Create an account</string>
    <string name="txtPseMail">Mail</string>

    <string name="msgErrorPseMiss">No Mail</string>
    <string name="msgErrorPswMiss">No password</string>
    <string name="msgErrorMail">Mail not valid</string>
    <string name="msgErrorPsw">Password not valid</string>
    <string name="msgErrorPse">Pse not valid</string>


    <!-- Account creation screen -->
    <string name="titleCrt">Account Creation</string>
    <string name="txtPsw">Password</string>
    <string name="txtMail">E-Mail</string>
    <string name="txtConf">Confirmation</string>
    <string name="txtCrtAcc">Enter your details</string>
    <string name="txtCrtion">Create</string>


    <!-- Category selection screen -->
    <string name="titleSel">Category selection</string>

    <string name="disc">Disconnection</string>
    <string name="addRequest">Add request</string>
    <string name="feedback">Send feedback</string>
    <string name="watchfeedbacks">Watch feedbacks</string>
    <string name="watchRequests">Watch requests</string>
    <string name="addPlace">Add a place</string>
    <string name="favAccess">Favourites</string>

    <string name="txtResto">Restaurants</string>
    <string name="txtUniv">University</string>
    <string name="txtShop">Shops</string>
    <string name="txtPnB">Pubs and Bars</string>


    <!-- Room selector -->
    <string name="txtRoom">Select a building or enter a room</string>
    <string name="txtBuil">Building</string>
    <string name="txtRm">Room</string>


    <!-- General strings -->
    <string name="txtFind">Find</string>
    <string name="txtDc">I dont mind</string>
    <string name="txttypefood"></string>
    <string name="txtprice">"Choose your price range"</string>
    <string name="txterror">Please enter a perimeter or choose the option I dont mind.</string>
    <string name="txtCtn">Continue</string>
    <string name="notFav">☆</string>
    <string name="inFav">★</string>
    <string name="logStc">Enter your login details or Create a new account</string>
    <string name="dir">Direction</string>
    <string name="del">❌</string>
    <string name="store">⇩</string>

</resources>
