<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SelCatTheme">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <GridLayout
        android:layout_width="365dp"
        android:layout_height="470dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696">

        <Button
            android:id="@+id/button14"
            android:layout_width="182dp"
            android:layout_height="234dp"
            android:text="@string/txtResto" />

        <Button
            android:id="@+id/button15"
            android:layout_width="182dp"
            android:layout_height="234dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/txtUniv" />

        <Button
            android:id="@+id/button16"
            android:layout_width="182dp"
            android:layout_height="234dp"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/txtShop" />

        <Button
            android:id="@+id/button17"
            android:layout_width="182dp"
            android:layout_height="234dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/txtPnB" />
    </GridLayout>


</android.support.constraint.ConstraintLayout>